fixed the header and the nav alignment

--- a/29-grid-portfolio/css/components/footer.css
+++ b/29-grid-portfolio/css/components/footer.css
@@ -3,15 +3,20 @@ body > footer {
   font-size: 0.75rem;
   border-block-start: 1px solid #4d4d4d;
   padding-block-start: 0.75rem;
+  display: flex;
+  justify-content: space-between;
 }
 
 body > footer p {
   margin: 0;
+  color: #fff;
+  font-weight: bold;
 }
 
 body > footer a {
   color: #fff;
   text-decoration: none;
+  font-weight: bold;
 }
 
 body > footer a:hover {
@@ -19,7 +24,7 @@ body > footer a:hover {
 }
 
 body > footer p:last-child {
-
+  font-size: smaller;
 }
 
 body > footer p:last-child a {
