--- a/29-grid-portfolio/css/components/header.css
+++ b/29-grid-portfolio/css/components/header.css
@@ -1,15 +1,21 @@
 body > header {
   display: grid;
+  row-gap: 30px;
+  column-gap: 15px;
   grid-template-columns: repeat(6, 145px);
+  align-items: end;
 }
-body header nav ul {
-  grid-template-columns: repeat(6, 145px);
+body > header nav ul {
+  grid-template-columns: repeat(5, 145px);
   display: grid;
-  gap: 20px;
+  column-gap: 15px;
+  row-gap: 30px;
 }
 
 body > header h1 {
   border-block-end: 1px solid #4d4d4d;
+  font-size: 1.25rem;
+  line-height: 1;
 }
 
 body > header a {
@@ -27,6 +33,9 @@ body > header a:hover {
 
 body > header nav {
   font-size: 1rem;
+  grid-column-start: 2;
+  grid-column-end: 7;
+}
 }
 
 body > header h1 {
